--- a/package.json
+++ b/package.json
@@ -4,8 +4,5 @@
   "main": "index.js",
   "repository": "git@github.com:rhyzx/code-loader.git",
   "author": "Bin Xin <rhyzix@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "require-from-string": "^2.0.2"
-  }
+  "license": "MIT"
 }
