--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "code-loader",
+  "name": "codegen-loader",
   "version": "1.2.0",
   "main": "index.js",
-  "repository": "git@github.com:rhyzx/code-loader.git",
+  "repository": "git@github.com:rhyzx/codegen-loader.git",
   "author": "Bin Xin <rhyzix@gmail.com>",
   "license": "MIT"
 }
